Bug 120977 - Incorrect default button on save confirmation dialog when no vcl plugins (gen)
Summary: Incorrect default button on save confirmation dialog when no vcl plugins (gen)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.0.1 target:6.1.5
Keywords: bibisected, bisected, regression
: 122809 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-10-27 21:13 UTC by Vjachelav
Modified: 2019-01-21 19:17 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vjachelav 2018-10-27 21:13:46 UTC
Description:
When installed gtk vcl plugin (libvclplug_gtk3lo.so) pressing Alt+F4,Enter on modified document saves it and closes writer

When no vcl plugins installed pressing Alt+F4,Enter do nothing because default button is not "save".

Very annoying behavior.

It is reproduced on libreoffice 6.1.2. I think it bug of whole 6.1.x branch.

On versions prior to 6.1.x ALL WORKS AS EXPECTED.

Steps to Reproduce:
1. Make sure that in /usr/lib/libreoffice/program only once vcl file libvclplug_genlo.so
2. Run writer. Open any existing document and modify it
3. Press Alt+F4 and then Enter 

Actual Results:
Writer not closed and document not saved

Expected Results:
Document must be saved and writer exited


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Comment 1 Xisco Faulí 2018-12-03 15:45:50 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=d75144cf44779a8f6cc9bccf9b0a6328b94a5b90

author	Caolán McNamara <caolanm@redhat.com>	2018-02-21 21:20:15 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2018-02-25 20:03:26 +0100
commit d75144cf44779a8f6cc9bccf9b0a6328b94a5b90 (patch)
tree 25b9f3c677c50ad715e1a0bc6bef3d5bf79ef957
parent 8d42909cd326cb26d8ba1fb383b5578f820c72ed (diff)
convert remaining InfoBox to weld::MessageDialog

Bisected with: bibisect-linux64-6.1
 
Adding Cc: to Caolán McNamara
Comment 2 Commit Notification 2018-12-04 08:51:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/a9296c2c5527c24c498cc6c5459463330cd78bd4%5E%21

Resolves: tdf#120977 intended default button overridden

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2018-12-04 08:52:36 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/043c2f39bfd5f70885dede547cb3c3b78ed8c5b9%5E%21

Resolves: tdf#120977 intended default button overridden

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2018-12-05 12:14:46 UTC
Verified in

Version: 6.2.0.0.beta1+
Build ID: b347009a4fb12b01100e97d9577b94449966f873
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this!
Comment 5 Commit Notification 2018-12-09 21:15:52 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/ca0cd6985adc7b321b9bc4affe79c4f26eab1722%5E%21

Resolves: tdf#120977 intended default button overridden

It will be available in 6.1.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2019-01-21 19:17:46 UTC
*** Bug 122809 has been marked as a duplicate of this bug. ***