Resolves: tdf#120977 intended default button overridden

for those cases where the built-in buttons are not
inserted

Change-Id: Ibb091832c097a15dc22a7994d94f8db6a4e47520